[tool.poetry]
name = "netbox-atlas-plugin"
version = "1.3.1"
description = "A Netbox plugin to provide a Prometheus service discovery api"
authors = ["Stefan Hipfel <stefan.hipfel@sap.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "netbox_atlas_plugin" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.1"
invoke = "^2.0.0"
typed-ast = "^1.5.4"
pylint-django = "^2.5.3"
pylint = "^2.17.0"
yamllint = "^1.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "DJ"]
line-length = 999
target-version = "py38"
